# cli

./: LICENSE  README.md  pyproject.toml
.claude/skills/meteo/: SKILL.md  examples.md
.github/workflows/: lint.yml  publish.yml  test.yml
meteo/: __init__.py  cli.py  config.py  plotting.py  utils.py
meteo/commands/: config.py  daily.py  hourly.py  inventory.py  monthly.py  nearby.py  normals.py  station.py
tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_utils.py
