[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meteostat-cli"
version = "0.2.0"
description = "Access weather and climate data through the terminal."
authors = [{ name = "Meteostat", email = "info@meteostat.net" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["weather", "climate", "meteostat", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "typer>=0.15.0",
    "meteostat>=2.1.4,<3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.9.0"]

[project.scripts]
meteo = "meteo.cli:main"

[project.urls]
Homepage = "https://github.com/meteostat/cli"
Repository = "https://github.com/meteostat/cli"
Issues = "https://github.com/meteostat/cli/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a33",
]

[tool.hatch.build.targets.wheel]
packages = ["meteo"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["meteo"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ty.environment]
python-version = "3.11"
